完善倒计时

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 每天0点上新
             </div>
             <div class="rush-over fl" id="rush-over">
-                <span>00</span>:<span>00</span>:<span>00.0</span>
+                <!--<span>00</span>:<span>00</span>:<span>00.0</span>-->
             </div>
             <div class="rush-more fr">
 
